# FCCSW

./: CMakeLists.txt  TestBox.gdml  init.sh  output.txt  plot_hits.py  read_cluster.py  show.py  tags  test.gdml  test.test  tmp_det.xml  viewer2.eps  visgdml.C
Detector/DetCommon/: CMakeLists.txt
Detector/DetComponents/: CMakeLists.txt
Detector/DetComponents/options/: extrapolationtest.py
Detector/DetComponents/src/: ConstantFieldSvc.hpp  ExtrapolationTest.cpp  ExtrapolationTest.h  GeoConstruction.cpp  GeoConstruction.h  GeoSvc.cpp  GeoSvc.h  TrackingGeoSvc.cpp  TrackingGeoSvc.h
Detector/DetFCChhBaseline1/compact/: FCChh_DectDimensions.xml  FCChh_DectMaster.xml
Detector/DetFCChhECalSimple/: CMakeLists.txt
Detector/DetFCChhHCalTile/: CMakeLists.txt
Detector/DetFCChhTrackerParametric/: CMakeLists.txt
Detector/DetFCChhTrackerParametric/src/: ParametricSimTracker_geo.cpp
Detector/DetFCChhTrackerSimple/: CMakeLists.txt
Detector/DetFCChhTrackerSimple/compact/: FCCTracker.xml  FCCTrackerLongStrip.xml  FCCTrackerPixel.xml  FCCTrackerShortStrip.xml  FCChh_GenericTracker.xml  TKLayoutOuter.xml  TKLayoutTracker.xml
Detector/DetFCChhTrackerSimple/src/: Barrel_geo.cpp  Endcap_geo.cpp  GenericBarrel_Geo.cpp  GenericEndcap_Geo.cpp  GenericTrackerCommon.cpp  GenericTrackerCommon.h  TKLayoutBarrel_geo.cpp
Detector/DetFCChhTrackerTkLayout/compact/: FCChh_Option3_Definitions.xml  FCChh_v3.03_Definitions.xml  Tracker.xml
Detector/DetFCChhTrackerTkLayout/src/: BeamTube_geo.cpp  TkLayoutBarrel_Geo.cpp  TkLayoutEndcap_Geo.cpp
Detector/DetInterface/DetInterface/: IGeoSvc.h  ITrackingGeoSvc.h
Detector/doc/: DD4hepInFCCSW.md
DetectorDescription/DetDesServices/: CMakeLists.txt
DetectorDescription/DetDesServices/DetDesServices/: ._DD4HepDetDesSvc.h  DD4HepDetDesSvc.h
DetectorDescription/DetDesServices/src/: DD4HepDetDesSvc.cxx
Examples/: CMakeLists.txt
Examples/options/: dumpTrkGeo.py  extrapolationTest.py  geant_fullsim.py  geant_fullsim_pgun_geantino.py
Examples/src/: ExtrapolationTest.cpp  ExtrapolationTest.h  TrkGeoToGdmlDumpSvc.cpp
Generation/src/components/: HepMCToEDMConverter.cpp
MagneticField/: CMakeLists.txt
MagneticField/MagneticField/: IBFieldSvc.h
MagneticField/src/components/: ConstantBField.cpp  ConstantBFieldSvc.h  InterpolatedBFieldSvc.cpp  InterpolatedBFieldSvc.h
Math/Math/: Math.h
Reconstruction/RecTracker/: CMakeLists.txt
Sim/SimG4Common/SimG4Common/: CharginoMinus.h  CharginoPhysics.h  CharginoPlus.h  Neutralino.h
Test/TestAlgorithms/: CMakeLists.txt
Test/TestReconstruction/: CMakeLists.txt
(+21 files in other folders)
